# pystandard

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: check_links.yml  lint.yml  test.yml  track_new_issues.yml  track_new_prs.yml
docs/: README.md
src/mypythonpackage/: hello.py
